// Copyright 2021 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package dlp;
option optimize_for = LITE_RUNTIME;

// Database entry containing information about the downloaded file.
message FileEntry {
  // Downloaded file source URL (the URL it was downloaded from).
  optional string source_url = 1;

  // Downloaded file referrer URL (the URL the download process was initiated
  // from).
  optional string referrer_url = 2;
}
